--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Duocomp</string>
+    <string name="study">Study!</string>
+    <string name="done">Done for today!</string>
+    <string name="resetbtn">RESET</string>
+    <string name="studiedbtn">RESET</string>
+    <string name="zero">0</string>
+    <string name="streaktxt">days streak</string>
 </resources>
